syntax = "proto3";

package ecommerce;

option go_package = "proto/generated/ecommerce/inventory;inventorypb";

service InventoryService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID(GetProductByIDRequest) returns (ProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse);
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
  string category_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateProductRequest {
  Product product = 1;
}

message UpdateProductRequest {
  string id = 1;
  Product product = 2;
}

message GetProductByIDRequest {
  string id = 1;
}

message ListProductsRequest {
  map<string, string> filter = 1;
  int64 skip = 2;
  int64 limit = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message ProductResponse {
  Product product = 1;
  string message = 2;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message CheckStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool in_stock = 1;
  int32 available_stock = 2;
}

message DecreaseStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message DecreaseStockResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}
